src/css/caveview.scss
/* ... */
.cv-frame input[type=range]::-webkit-slider-runnable-track {
	@include track-size();
	@include track();
}

.cv-frame input[type=range]::-webkit-slider-thumb {
	@include thumb();
	-webkit-appearance: none;
	margin-top: -6px;
}

.cv-frame input[type=range]:focus::-webkit-slider-runnable-track {
	background: $track-background;
}

.cv-frame input[type=range]::-moz-range-track {
	@include track-size();
	@include track();
}

.cv-frame input[type=range]::-moz-range-thumb {
	@include thumb();
}

.cv-frame input[type=range]::-ms-track {
	@include track-size();
	background: transparent;
	border-color: transparent;
	color: transparent;
}

.cv-frame input[type=range]::-ms-fill-lower {
	@include track();
}

.cv-frame input[type=range]::-ms-fill-upper {
	@include track();
}

.cv-frame input[type=range]::-ms-thumb {
	@include thumb();
	margin-top: 1px;
}

.cv-frame input[type=range]:focus::-ms-fill-lower,
.cv-frame input[type=range]:focus::-ms-fill-upper {
	background: $track-background;
}

.cv-frame div.page label.cv-file-label {
	margin: 2px 0px 2px 0px;
	padding: 0px 0px 3px 20px;
	height: 20px;
	border: 1px solid grey;
	background-repeat: no-repeat;
	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='white' width='18px' height='18px'%3E%3Cpath d='M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z'/%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3C/svg%3E");
	vertical-align: bottom;
}

.cv-frame label.cv-file-label + select {
	margin-top: 2px;
	border-left: 2px solid $background;
}

.cv-frame label.cv-file-label img {
	position: absolute;
	left: 2px;
	top: 3px;
	width: 18px;
	height: 16px;
	background-color: white;
	display: block;
}

.cv-frame label.cv-file-label:hover {
	color: $highlight;
	border-color: $highlight;
}

.cv-frame label.cv-file-label:hover img {
	background-color: $highlight;
}

.cv-frame input[type=file] {
	width: 1px;
	opacity: 0;
}

.logo {
	width: 48px;
	height: 48px;
	margin-top: 15px;
	margin-right: 8px;
	background-image: url( "../images/logo.svg" );
	background-size: cover;
	float: left;
}

#cv-splash {
	position: absolute;
	width: 100%;
	top: 50%;
	color: white;
	background: transparent;
	text-align: center;
}

.cv-splash canvas {
	filter: grayscale( 50% ) blur( 1px );
}

.header_full {
	background-repeat: no-repeat;
	background-position: right bottom;
	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='white' width='18px' height='18px'%3E%3Cpath d='M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z'/%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3C/svg%3E");
}

.header_collapsed {
	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='white' width='18px' height='18px'%3E%3Cpath d='M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z'/%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3C/svg%3E");
}

.container_full {
	overflow: hidden;
	transition: max-height $animation-speed ease-in;
}

.container_collapsed {
	max-height: 0;
	overflow: hidden;
	transition: max-height $animation-speed ease-out;
}

.cv-frame div.page ul.cv-tree {
	height: auto;
	width: auto;
}

.cv-frame ul.cv-tree li {
	margin-left: 0;
}

.cv-frame div.page ul.cv-tree ul {
	padding-right: 0;
}

.cv-frame li ul.cv-tree {
	margin-left: 10px;
}

.cv-frame li span {
	display: inline-block;
	width: 14px;
	padding-right: 4px;
}

.cv-frame div.page li.highlight {
	border-bottom: 1px solid white;
	font-weight: bold;
}

